# aerodisspace-server

./: .env.example  .gitignore  Cargo.toml  DATABASE.md  README.MD
crates/api/: Cargo.toml  build.rs
crates/api/src/: envs.rs  main.rs
crates/api/src/app/: mod.rs
crates/api/src/app/user/: get_user.rs  mod.rs
crates/api/src/app/user/auth/: login_user.rs  mod.rs  signup_user.rs
crates/api/src/database/scylladb/: scylladb.rs
crates/api/src/dto/: mod.rs  wrapper.rs
crates/api/src/dto/user/: mod.rs  user_auth_dto.rs  user_dto.rs
crates/api/src/models/: mod.rs
crates/api/src/models/aircraft/: aircraft.rs
crates/api/src/models/sensor_data/: sensor_data.rs
crates/api/src/models/udts/: mod.rs  motor_udt.rs  sensor_udt.rs  servo_udt.rs
crates/api/src/models/user/: user.rs
crates/api/src/router/: mod.rs
crates/api/src/router/aircraft/: aircraft_router.rs  mod.rs
crates/api/src/router/catcher/: catcher_router.rs  mod.rs
crates/api/src/router/guards/: jwt_token_guard.rs  mod.rs  user_jwt_token.rs
crates/api/src/router/user/: free.rs  mod.rs  user_router.rs
crates/api/src/server/: mod.rs  server.rs  shared.rs
crates/api/src/utils/: jwt_token_claims.rs  mod.rs
crates/common/app/: Cargo.toml
crates/common/app/src/: lib.rs  repository.rs
crates/common/app/src/user/: auth.rs  mod.rs  roles.rs  user.rs
crates/common/database/: Cargo.toml  build.rs
crates/common/database/src/: lib.rs
crates/common/database/src/scylladb/: connection.rs
crates/common/dto/: Cargo.toml
crates/common/dto/src/: inter.rs  lib.rs  wrapper.rs
crates/common/dto/src/user/: auth.rs  free.rs  mod.rs
crates/common/models/: Cargo.toml
crates/common/models/src/: aircraft.rs  lib.rs  sensorpack.rs  user.rs
crates/common/models/src/udts/: devices.rs
crates/common/utils/auth/: Cargo.toml
crates/common/utils/auth/src/: hash.rs
crates/common/utils/envs/: Cargo.toml
crates/common/utils/envs/src/: lib.rs
crates/common/utils/error_mapper/src/: lib.rs
crates/live/: Cargo.toml
crates/utils/auth/src/: fields.rs  jwt_token.rs  lib.rs
crates/utils/error_mapper/: Cargo.toml
crates/utils/logger/: Cargo.toml
crates/utils/logger/src/: lib.rs
