[workspace]
resolver = "2"
members = ["crates/api", "crates/utils/auth", "crates/utils/error_mapper", "crates/utils/logger"]
default-members = ["crates/api"]

[workspace.package]
documentation = "https://docs.aerodis.space"
homepage = "https://aerodis.space"
edition = "2021"
version = "0.1.0"
authors = ["lnxdxtf <gabrielramosmichaliszen@gmail.com>"]

[workspace.lints.rust]
unused = "allow"       # For experimental development
unsafe_code = "forbid" # For experimental development

[workspace.dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.33"
logger = { path = "crates/utils/logger" }
auth = { path = "crates/utils/auth" }
error_mapper = { path = "crates/utils/error_mapper" }
regex = "1.10.3"
once_cell = "1.19.0"