[workspace]
resolver = "2"
members = [
    # API (REST) and Database (CRUD) operations
    "crates/api",

    # Websocket API and Live Stream data (sensors and video)
    "crates/live",

    # App is where the main function is defined,
    # Stores the logic for the application's lifecycle
    "crates/common/app",

    # Database connection
    "crates/common/database",

    # Data Transfer Objects (DTOs) are used to define the data that is sent to and from the API
    "crates/common/dto",

    # Models is where the database models are defined
    # Models are used to define the database schema (tables, columns, udts, etc.)
    "crates/common/models",

    # Auth & Token Utils
    "crates/common/utils/auth",

    # Environment Variables
    "crates/common/utils/envs",

    # Application Error Mapper
    "crates/common/utils/error_mapper",

    # Logger
    "crates/common/utils/logger",
]
default-members = ["crates/api"]

[workspace.package]
documentation = "https://docs.aerodis.space"
homepage = "https://aerodis.space"
edition = "2021"
version = "0.1.0"
authors = ["lnxdxtf <gabrielramosmichaliszen@gmail.com>"]

[workspace.lints.rust]
unused = "allow"       # For experimental development
unsafe_code = "forbid" # For experimental development

[workspace.dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.108"
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.33"
regex = "1.10.3"
once_cell = "1.19.0"
charybdis = "0.3.0"
scylla = "0.12.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_ws = "0.1.0"
fake = "2.9.2"
futures = "0.3.30"
bincode = "1.3.3"
tokio = "1.36.0"
async-trait = "0.1.77"

# Main Crates for Application, where app is the logical entrypoint,
# which API and Live are the main services that expose the application
app = { path = "crates/common/app" }
database = { path = "crates/common/database" }
dto = { path = "crates/common/dto" }
models = { path = "crates/common/models" }

# Utils
envs = { path = "crates/common/utils/envs" }
logger = { path = "crates/common/utils/logger" }
auth = { path = "crates/common/utils/auth" }
error_mapper = { path = "crates/common/utils/error_mapper" }
