[package]
name = "app"
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
error_mapper = { workspace = true }
models = { workspace = true }
database = { workspace = true }
futures = { workspace = true }
auth = { workspace = true }
chrono = { workspace = true }
fake = { workspace = true }
uuid = { workspace = true }
dto = { workspace = true }
envs = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
