[package]
name = "logger"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

[lints]
workspace = true
