[package]
name = "auth"
edition.workspace = true
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { workspace = true }
error_mapper = { workspace = true }
serde = { workspace = true }
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"

[lints]
workspace = true
